# interactive-pitch-analysis-viewer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  generate_pdf.py
mock_backend/: main.py  mock_data.py
real_backend/: analyzer.py  main.py  metrics.py  phase_detector.py  requirements.txt
resources/: resources.qrc
resources/stylesheets/: dark_theme.qss
src/app/: AppConfig.cpp  AppConfig.h  Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
src/models/: AnalysisResult.cpp  AnalysisResult.h  BiomechanicsMetrics.h  FrameCache.cpp  FrameCache.h  PitcherProfile.h  PoseFrame.h  PoseLandmark.h  SessionModel.cpp  SessionModel.h
src/presenters/: AnalysisPresenter.cpp  AnalysisPresenter.h  ComparisonPresenter.cpp  ComparisonPresenter.h  MainPresenter.cpp  MainPresenter.h  VideoPresenter.cpp  VideoPresenter.h
src/rendering/: AngleMetricRenderer.cpp  AngleMetricRenderer.h  IMetricRenderer.h  RatioMetricRenderer.cpp  RatioMetricRenderer.h  TempoMetricRenderer.cpp  TempoMetricRenderer.h
src/services/: AnalysisThread.cpp  AnalysisThread.h  ApiClient.cpp  ApiClient.h  PrefetchService.cpp  PrefetchService.h  ThumbnailGenerator.cpp  ThumbnailGenerator.h  VideoDecodeService.cpp  VideoDecodeService.h
src/utils/: CoordMapper.cpp  CoordMapper.h  FrameRequestQueue.cpp  FrameRequestQueue.h  JsonParser.cpp  JsonParser.h  MetricThresholds.h  SkeletonTopology.h
src/views/: ComparisonView.cpp  ComparisonView.h  MetricCard.cpp  MetricCard.h  MetricsPanel.cpp  MetricsPanel.h  PitcherMatchPanel.cpp  PitcherMatchPanel.h  PoseOverlayRenderer.cpp  PoseOverlayRenderer.h  SpeedControlWidget.cpp  SpeedControlWidget.h  TimelineWidget.cpp  TimelineWidget.h  VideoPlayerWidget.cpp  VideoPlayerWidget.h
tests/: CMakeLists.txt
tests/fixtures/: sample_analysis_response.json
